--- a/app/src/main/res/layout/activity_museum_navigator.xml
+++ b/app/src/main/res/layout/activity_museum_navigator.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MuseumNavigator">
+    tools:context=".MuseumNavigator"
+    android:background="@color/GrayBlue">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
