--- a/app/src/main/res/layout/activity_my_amuse.xml
+++ b/app/src/main/res/layout/activity_my_amuse.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyAMUSE">
+    tools:context=".MyAMUSE"
+    android:background="@color/GrayBlue">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
