--- a/app/src/main/res/layout/activity_qr_code_result.xml
+++ b/app/src/main/res/layout/activity_qr_code_result.xml
@@ -8,4 +8,16 @@
     tools:context=".QrCodeResult"
     android:background="@color/GrayBlue">
 
+    <TextView
+        android:id="@+id/Sample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="sample"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
