Added Navigation Bar to QRResult

--- a/app/src/main/res/layout/activity_qr_code_result.xml
+++ b/app/src/main/res/layout/activity_qr_code_result.xml
@@ -6,7 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QrCodeResult"
-    android:background="@color/GrayBlue">
+    android:background="@color/GrayBlue"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
+
+    <Toolbar
+        android:id="@+id/navBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="32dp"
+        android:background="@drawable/btn_rounded_corner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/Sample"
