--- a/app/src/main/res/layout/activity_qr_code_result.xml
+++ b/app/src/main/res/layout/activity_qr_code_result.xml
@@ -14,13 +14,31 @@
         android:id="@+id/navBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="32dp"
-        android:background="@drawable/btn_rounded_corner"
+        android:background="@drawable/rounded_corner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp">
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:background="@drawable/menu_buttton"
+            android:layout_margin="2dp"/>
+        <Button
+            android:layout_width="75dp"
+            android:layout_height="50dp"
+            android:text="QR"
+            android:textSize="25sp"
+            android:layout_margin="2dp"
+            android:backgroundTint="@color/Transparent"
+            android:outlineAmbientShadowColor="@color/Transparent"
+            android:shadowColor="@color/Transparent"
+            android:outlineSpotShadowColor="@color/Transparent"/>
+    </Toolbar>
 
     <TextView
         android:id="@+id/Sample"
