QR Code Result and My Amuse - Partially Finished

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="GrayBlue">#8CA9AD</color>
     <color name="Patina">#5F888E</color>
     <color name="Juniper">#60848c</color>
+    <color name="Light_Blue">#C4DFE3</color>
+    <color name="Blood">#710C04</color>
+
+
 </resources>
