--- a/app/src/main/res/layout/activity_my_amuse.xml
+++ b/app/src/main/res/layout/activity_my_amuse.xml
@@ -5,7 +5,89 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyAMUSE"
-    android:background="@color/GrayBlue">
+    android:background="@color/GrayBlue"
+    tools:context=".MyAMUSE">
+
+    <Button
+        android:id="@+id/btnRedeem"
+        android:layout_width="165dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/btn_rounded_corner"
+        android:text="@string/btnRedeem"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="321dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="76dp"
+        android:backgroundTint="@color/black"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myAmuseTitle" />
+
+    <TextView
+        android:id="@+id/museumVisited"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="@string/museumVisited"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.159"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/museumVisited2"
+        android:layout_width="325dp"
+        android:layout_height="246dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/dropdown_curved_corner"
+        android:padding="16dp"
+        android:text="@string/amuseStamp"
+        android:textAlignment="center"
+        android:textColor="@color/Blood"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/museumVisited3" />
+
+    <TextView
+        android:id="@+id/museumVisited3"
+        android:layout_width="325dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/dropdown_curved_corner"
+        android:padding="16dp"
+        android:text="@string/museumDetails"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+    <TextView
+        android:id="@+id/myAmuseTitle"
+        android:layout_width="290dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="104dp"
+        android:fontFamily="serif"
+        android:text="@string/myAmuseTitle"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
