--- a/app/src/main/res/layout/activity_qr_code_result.xml
+++ b/app/src/main/res/layout/activity_qr_code_result.xml
@@ -10,33 +10,42 @@
 
     <Toolbar
         android:id="@+id/navBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/rounded_corner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"
+        android:layout_width="381dp"
+        android:layout_height="60dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <Button
-            android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:background="@drawable/menu_buttton"
-            android:layout_marginStart="25dp"/>
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:text="QR"
-            android:textSize="25sp"
-            android:layout_margin="2dp"
-            android:backgroundTint="@color/Transparent"
-            android:outlineAmbientShadowColor="@color/Transparent"
-            android:shadowColor="@color/Transparent"
-            android:outlineSpotShadowColor="@color/Transparent"/>
+            android:layout_width="45dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:background="@drawable/menu_buttton" />
+
+
     </Toolbar>
+
+    <Button
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_margin="2dp"
+        android:layout_marginEnd="228dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/Transparent"
+        android:outlineAmbientShadowColor="@color/Transparent"
+        android:outlineSpotShadowColor="@color/Transparent"
+        android:shadowColor="@color/Transparent"
+        android:text="QR"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/navBar"
+        app:layout_constraintEnd_toEndOf="@+id/navBar"
+        app:layout_constraintTop_toTopOf="@+id/navBar" />
 
     <ImageView
         android:id="@+id/monalisascream"
@@ -89,24 +98,10 @@
         app:layout_constraintTop_toBottomOf="@+id/monalisascream" />
 
     <TextView
-        android:id="@+id/aName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/aName"
-        android:textAlignment="center"
-        android:textColor="@color/Blood"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
-
-    <TextView
         android:id="@+id/aNameSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/aNameSub"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -117,10 +112,24 @@
         app:layout_constraintTop_toBottomOf="@+id/aName" />
 
     <TextView
+        android:id="@+id/aName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/aName"
+        android:textAlignment="center"
+        android:textColor="@color/Blood"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
+
+    <TextView
         android:id="@+id/mUsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="@string/mUsed"
         android:textAlignment="center"
         android:textColor="@color/Blood"
@@ -134,7 +143,7 @@
         android:id="@+id/mUsedSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/mUsedSub"
         android:textAlignment="center"
         android:textColor="@color/black"
