--- a/app/src/main/res/layout/activity_museum_navigator.xml
+++ b/app/src/main/res/layout/activity_museum_navigator.xml
@@ -43,4 +43,37 @@
         app:layout_constraintBottom_toBottomOf="@+id/navBar"
         app:layout_constraintEnd_toEndOf="@+id/navBar"
         app:layout_constraintTop_toTopOf="@+id/navBar" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/museumInfo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/Juniper">
+        <TextView
+            android:id="@+id/txtMuseumName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/txtMuseumName"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/txtMuseumDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/txtMuseumDesc"
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"
+            android:textSize="23sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtMuseumName"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
