--- a/app/src/main/res/layout/activity_puzzle.xml
+++ b/app/src/main/res/layout/activity_puzzle.xml
@@ -5,6 +5,95 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Puzzle">
+    tools:context=".Puzzle"
+    android:background="@color/GrayBlue">
+    <Toolbar
+        android:id="@+id/navBar"
+        android:layout_width="381dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/puzzleTitle">
 
+        <Button
+            android:layout_width="45dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:background="@drawable/menu_buttton" />
+    </Toolbar>
+
+    <Button
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_margin="2dp"
+        android:layout_marginEnd="228dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/Transparent"
+        android:outlineAmbientShadowColor="@color/Transparent"
+        android:outlineSpotShadowColor="@color/Transparent"
+        android:shadowColor="@color/Transparent"
+        android:text="QR"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/navBar"
+        app:layout_constraintEnd_toEndOf="@+id/navBar"
+        app:layout_constraintTop_toTopOf="@+id/navBar" />
+
+    <TextView
+        android:id="@+id/puzzleTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/resTitle"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_marginTop="25dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/navBar"
+        app:layout_constraintBottom_toTopOf="@id/monalisascream"/>
+
+    <ImageView
+        android:id="@+id/monalisascream"
+        android:layout_width="287dp"
+        android:layout_height="230dp"
+        android:layout_marginTop="25dp"
+        android:contentDescription="@string/resDescr"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/puzzleTitle"
+        app:srcCompat="@drawable/monalisa_scream" />
+    <RelativeLayout
+        android:layout_width="297dp"
+        android:layout_height="240dp"
+        android:background="@color/Patina"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/monalisascream"
+        app:layout_constraintBottom_toTopOf="@id/btnRedeem"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnRedeem"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:background="@drawable/btn_rounded_corner"
+        android:backgroundTint="@color/Juniper"
+        android:shadowColor="@color/black"
+        android:shadowRadius="2"
+        android:text="@string/btnFinish"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
