--- a/app/src/main/res/layout/activity_my_amuse.xml
+++ b/app/src/main/res/layout/activity_my_amuse.xml
@@ -94,7 +94,6 @@
         app:layout_constraintTop_toBottomOf="@+id/mDetails1" />
 
 
-
     <TextView
         android:id="@+id/mDetails1"
         android:layout_width="325dp"
@@ -254,7 +253,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_rounded_corner"
         android:text="@string/btnRedeem"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
