--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -103,13 +103,13 @@
             android:shadowRadius="2"
             android:text="@string/btnQrScan"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@id/btnMyAMUSE"
+            app:layout_constraintBottom_toTopOf="@id/btnMYAMUSE"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnMNav" />
 
         <Button
-            android:id="@+id/btnMyAMUSE"
+            android:id="@+id/btnMYAMUSE"
             android:layout_width="200dp"
             android:layout_height="55dp"
             android:layout_margin="10dp"
