--- a/app/src/main/res/layout/activity_puzzle.xml
+++ b/app/src/main/res/layout/activity_puzzle.xml
@@ -85,7 +85,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/btnRedeem"
+        android:id="@+id/btnFinish"
         android:layout_width="165dp"
         android:layout_height="48dp"
         android:layout_margin="10dp"
