--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="Juniper">#60848c</color>
     <color name="Light_Blue">#C4DFE3</color>
     <color name="Blood">#710C04</color>
+    <color name="DarkBlue">#4a676b</color>
+
 
 
 </resources>
