--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -10,7 +10,7 @@
 
 
     <EditText
-        android:id="@+id/emailLogin"
+        android:id="@+id/userInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/login_creds"
@@ -25,7 +25,7 @@
         tools:layout_editor_absoluteY="436dp" />
 
     <Button
-        android:id="@+id/btnPuzzle2"
+        android:id="@+id/btnLogin"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/btn_rounded_corner"
@@ -41,7 +41,7 @@
         tools:layout_editor_absoluteY="609dp" />
 
     <EditText
-        android:id="@+id/passLogin"
+        android:id="@+id/passInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/login_creds"
@@ -89,7 +89,7 @@
         tools:layout_editor_absoluteY="358dp" />
 
     <ImageView
-        android:id="@+id/imageView17"
+        android:id="@+id/loginLogo"
         android:layout_width="195dp"
         android:layout_height="159dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +109,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView17" />
+        app:layout_constraintTop_toTopOf="@+id/loginLogo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
