Fixed Navigation Bar MuseumFinder: navBar Changed overall code structure

--- a/app/src/main/res/layout/activity_my_amuse.xml
+++ b/app/src/main/res/layout/activity_my_amuse.xml
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
+            android:id="@+id/btnMenu"
             android:layout_width="45dp"
             android:layout_height="30dp"
             android:layout_marginStart="25dp"
