--- a/app/src/main/res/layout/activity_museum_finder.xml
+++ b/app/src/main/res/layout/activity_museum_finder.xml
@@ -15,5 +15,7 @@
         android:background="@drawable/rounded_corner"
         android:layout_margin="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        android:gravity="start"
+        tools:ignore="MissingConstraints" >
+    </androidx.appcompat.widget.Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
