--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -7,40 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".Rewards"
     android:background="@color/GrayBlue">
-    <Toolbar
+
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/navBar"
-        android:layout_width="381dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/rounded_corner"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="start"
+        tools:ignore="MissingConstraints" >
+    </androidx.appcompat.widget.Toolbar>
 
-        <Button
-            android:layout_width="45dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/menu_buttton" />
-    </Toolbar>
-
-    <Button
-        android:layout_width="75dp"
-        android:layout_height="50dp"
-        android:layout_margin="2dp"
-        android:layout_marginEnd="228dp"
-        android:layout_marginBottom="15dp"
-        android:backgroundTint="@color/Transparent"
-        android:outlineAmbientShadowColor="@color/Transparent"
-        android:outlineSpotShadowColor="@color/Transparent"
-        android:shadowColor="@color/Transparent"
-        android:text="QR"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="@+id/navBar"
-        app:layout_constraintEnd_toEndOf="@+id/navBar"
-        app:layout_constraintTop_toTopOf="@+id/navBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
