--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/btnMenu"
-        android:icon="@drawable/menu_buttton"
-        android:title="Menu"
-        app:showAsAction="ifRoom"/>
     <item android:id="@+id/btnQR"
         android:icon="@drawable/qr_button"
         android:title="QR Scan"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/btnMenu"
+        android:icon="@drawable/menu_buttton"
+        android:title="Menu"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item android:id="@+id/menuDashboard"
+                android:title="Dashboard"/>
+            <item android:id="@+id/menuMFinder"
+                android:title="Museum Finder"/>
+            <item android:id="@+id/menuMNav"
+                android:title="Museum Navigator"/>
+            <item android:id="@+id/menuMYAMUSE"
+                android:title="MY AMUSE"/>
+            <item android:id="@+id/menuLogOut"
+                android:title="Log Out"/>
+        </menu>
+    </item>
+
 </menu>
